# BasicShaderSFML

./: CMakeLists.txt  README.md  readme.txt
data/: shader.frag
src/: main.cpp
